Alterações feitas em sala para entregar a sprint

--- a/views/paginaContratoOperador.hbs
+++ b/views/paginaContratoOperador.hbs
@@ -108,11 +108,11 @@
                     <div class="form-container">
                         <h1 class="text-center title">Gerador de Contratos</h1>
 
-                        <form id="formContrato">
+                        <form id="formContrato" action="auth/registrarContrato" method="post">
                             <div class="mb-3 row">
                                 <label for="contratante" class="col-sm-4 col-form-label">Contratante:</label>
                                 <div class="col-sm-8">
-                                    <input type="text" class="form-control" id="contratante" readonly disabled>
+                                    <input type="text" class="form-control" id="contratante" name="nomeContratante" disabled>
 
                                 </div>
                             </div>
@@ -120,7 +120,7 @@
                                 <label for="cpfCnpj" class="col-sm-4 col-form-label">CPF ou CNPJ:</label>
                                 <div class="col-sm-8">
 
-                                    <input type="text" class="form-control" id="cpfCnpj" readonly disabled>
+                                    <input type="text" class="form-control" id="cpfCnpj" name="cpfCnpj">
 
                                 </div>
                             </div>
@@ -128,33 +128,47 @@
                                 <label for="endereco" class="col-sm-4 col-form-label">Endereço:</label>
                                 <div class="col-sm-8">
 
-                                    <input type="text" class="form-control" id="endereco" readonly disabled>
+                                    <input type="text" class="form-control" id="endereco" name="enderecoCliente" disabled>
 
                                 </div>
                             </div>
                             <div class="mb-3 row">
                                 <label for="dataEvento" class="col-sm-4 col-form-label">Data do Evento:</label>
                                 <div class="col-sm-8">
-                                    <input type="date" class="form-control" id="dataEvento">
+
+                                    <input type="date" class="form-control" id="dataEvento" name="dataEvento">
+
                                 </div>
                             </div>
                             <div class="mb-3 row">
-                                <label for="horarioMontagem" class="col-sm-4 col-form-label">Horário da
-                                    Montagem:</label>
+                                <label for="horarioMontagem" class="col-sm-4 col-form-label">Horário da Montagem:</label>
                                 <div class="col-sm-8">
-                                    <input type="time" class="form-control" id="horarioMontagem">
+                                    <input type="time" class="form-control" id="horarioMontagem" name="horarioMontagem">
+                                </div>
+                            </div>
+                            <div class="mb-3 row">
+                                <label for="horarioMontagem" class="col-sm-4 col-form-label">Horário de
+                                    Encerramento:</label>
+                                <div class="col-sm-8">
+
+                                    <input type="time" class="form-control" id="horarioEncerramento" name="horarioEncerramento">
+
                                 </div>
                             </div>
                             <div class="mb-3 row">
                                 <label for="enderecoEvento" class="col-sm-4 col-form-label">Endereço do Evento:</label>
                                 <div class="col-sm-8">
-                                    <input type="text" class="form-control" id="enderecoEvento">
+
+                                    <input type="text" class="form-control" id="enderecoEvento" name="enderecoEvento">
+
                                 </div>
                             </div>
-                             <div class="mb-3 row">
+                            <div class="mb-3 row">
                                 <label for="quantidadeProdutos" class="col-sm-4 col-form-label">Quantidade de Produtos:</label>
                                 <div class="col-sm-8">
-                                    <input type="number" class="form-control" id="quantidadeProdutos" oninput="showProductSelection()" required>
+
+                                    <input type="number" class="form-control" id="quantidadeProdutos" oninput="showProductSelection()" name="quantidadeProdutos" required>
+
                                 </div>
                             </div>
                             <div class="mb-3 row" id="produtoSelectionContainer" style="display: none;">
@@ -166,19 +180,20 @@
                             <div class="mb-3 row">
                                 <label for="formaPagamento" class="col-sm-4 col-form-label">Forma de Pagamento:</label>
                                 <div class="col-sm-8">
-                                    <select class="form-control" id="formaPagamento" onchange="togglePaymentDetails()">
+                                    <select class="form-control" id="formaPagamento" onchange="togglePaymentDetails()" name="formaPagamento">
                                         <option value="">Selecione uma opção</option>
-                                        <option value="pix">Pix</option>
-                                        <option value="pixParcelado">Pix Parcelado</option>
-                                        <option value="cartaoCredito">Cartão de Crédito</option>
+                                        <option value="Pix">Pix</option>
+                                        <option value="Pix Parcelado">Pix Parcelado</option>
+                                        <option value="Cartão de Crédito">Cartão de Crédito</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="mb-3 row">
-                                <label for="dataPagamento" id="dataPagamentoLabel" class="col-sm-4 col-form-label">Data
-                                    de Pagamento:</label>
+                                <label for="dataPagamento" id="dataPagamentoLabel" class="col-sm-4 col-form-label">Data de Pagamento:</label>
                                 <div class="col-sm-8">
-                                    <input type="date" class="form-control" id="dataPagamento">
+
+                                    <input type="date" class="form-control" id="dataPagamento" name="dataPagamento">
+
                                 </div>
                             </div>
                             <div class="mb-3 row payment-details" id="pixParceladoDetails" style="display: none;">
@@ -188,18 +203,20 @@
                                         oninput="updatePaymentDates()">
                                 </div>
                             </div>
-            
-                            <div  class="mb-3 row payment-details" id="datasPagamentos" style="display: none;">
+
+                            <div class="mb-3 row payment-details" id="datasPagamentos" style="display: none;">
                                 <label for="datasPagamento" class="col-sm-4 col-form-label">Datas de Pagamento:</label>
-                                <div class="col-sm-8 "style="margin-left: 240px;" id="paymentDatesContainer">
+                                <div class="col-sm-8" style="margin-left: 240px;" id="paymentDatesContainer">
                                     <!-- As datas serão inseridas aqui -->
                                 </div>
                             </div>
-                            
+
                             <div class="mb-3 row">
                                 <label for="valorTotal" class="col-sm-4 col-form-label">Valor Total:</label>
                                 <div class="col-sm-8">
-                                    <input type="text" class="form-control" id="valorTotal">
+
+                                    <input type="text" class="form-control" id="valorTotal" name="valorTotal">
+
                                 </div>
                             </div>
                             <div class="text-center">
@@ -236,7 +253,6 @@
 
             const labelDatasPagamentos = document.getElementById("dataPagamentoLabel");
 
-
             if (formaPagamento === "pixParcelado") {
                 pixParceladoDetails.style.display = "flex";
                 datasPagamentos.style.display = "block";
@@ -257,23 +273,22 @@
         }
 
         function updatePaymentDates() {
-    const numParcelas = document.getElementById("numParcelas").value;
-    const paymentDatesContainer = document.getElementById("paymentDatesContainer");
+            const numParcelas = document.getElementById("numParcelas").value;
+            const paymentDatesContainer = document.getElementById("paymentDatesContainer");
 
-    // Limpa as datas de pagamento antes de preencher
-    paymentDatesContainer.innerHTML = "";
+            // Limpa as datas de pagamento antes de preencher
+            paymentDatesContainer.innerHTML = "";
 
-    // Adiciona campos para as datas de pagamento
-    for (let i = 1; i <= numParcelas; i++) {
-        // Cria um input de data e insere diretamente dentro do col-sm-8
-        const input = document.createElement("input");
-        input.type = "date";
-        input.className = "form-control mb-2"; // Estilo do Bootstrap para alinhar corretamente
+            // Adiciona campos para as datas de pagamento
+            for (let i = 1; i <= numParcelas; i++) {
+                // Cria um input de data e insere diretamente dentro do col-sm-8
+                const input = document.createElement("input");
+                input.type = "date";
+                input.className = "form-control mb-2"; // Estilo do Bootstrap para alinhar corretamente
 
-        paymentDatesContainer.appendChild(input);
-    }
-}
-
+                paymentDatesContainer.appendChild(input);
+            }
+        }
 
         // Validação do formulário
         document.getElementById('formContrato').addEventListener('submit', function (event) {
@@ -282,7 +297,6 @@
                 'dataEvento',
                 'horarioMontagem',
                 'enderecoEvento',
-                'produtoEscolhido',
                 'valorTotal'
             ];
             let emptyFields = false;
@@ -330,48 +344,56 @@
                 : '<i class="bi bi-moon-fill"></i>';
         });
 
-        //Função Atualizar Produto
-function showProductSelection() {
-    const quantidadeProdutos = document.getElementById("quantidadeProdutos").value;
-    const produtoSelectionContainer = document.getElementById("produtoSelectionContainer");
-    produtoSelectionContainer.style.display = quantidadeProdutos > 0 ? "block" : "none";
-    produtoSelectionContainer.innerHTML = ''; // Limpa os produtos antes de adicionar novos
+        // Função para mostrar a seleção de produtos
+        function showProductSelection() {
+            const quantidadeProdutos = document.getElementById("quantidadeProdutos").value;
+            const produtoSelectionContainer = document.getElementById("produtoSelectionContainer");
+            produtoSelectionContainer.style.display = quantidadeProdutos > 0 ? "block" : "none";
+            produtoSelectionContainer.innerHTML = ''; // Limpa os produtos antes de adicionar novos
 
-    for (let i = 0; i < quantidadeProdutos; i++) {
-        const productSelect = document.createElement("div");
-        productSelect.className = "row mb-2"; // Adiciona espaçamento entre os selects
-        productSelect.innerHTML = `
-            <label for="produtoSelecionado${i}" class="col-sm-4 col-form-label">Produto:</label>
-            <div class="col-sm-8">
-                <select class="form-select" id="produtoSelecionado${i}">
-                    <option value="" disabled selected>Selecione um produto</option>
-                </select>
-            </div>
-        `;
-        produtoSelectionContainer.appendChild(productSelect);
+            for (let i = 0; i < quantidadeProdutos; i++) {
+                const productSelect = document.createElement("div");
+                productSelect.className = "row mb-2"; // Adiciona espaçamento entre os selects
+                productSelect.innerHTML = `
+                    <label for="produtoSelecionado${i}" class="col-sm-4 col-form-label">Produto:</label>
+                    <div class="col-sm-8">
+                        <select class="form-select" id="produtoSelecionado${i}">
+                            <option value="" disabled selected>Selecione um produto</option>
+                        </select>
+                    </div>
+                `;
+                produtoSelectionContainer.appendChild(productSelect);
 
-        // Preencher o select com produtos
-        carregarListaDeProdutos(productSelect.querySelector(`select`));
+                // Preencher o select com produtos
+                carregarListaDeProdutos(productSelect.querySelector(`select`));
+            }
+        }
+
+        // Carregar a lista de produtos
+async function carregarListaDeProdutos(produtoSelecionado) {
+    try {
+        const response = await fetch('/auth/produtos'); // Altere a URL para a sua API de produtos
+        const produtos = await response.json();
+        
+        console.log(produtos); // Adicione isso para verificar a estrutura dos dados
+
+        // Limpa as opções existentes no select
+        produtoSelecionado.innerHTML = '<option value="" disabled selected>Selecione um produto</option>';
+
+        produtos.forEach((produto) => {
+            const option = document.createElement('option');
+            option.value = produto.id; // Supondo que o ID do produto é 'id'
+            option.textContent = produto.nome; // Supondo que o nome do produto é 'nomeProduto'
+            produtoSelecionado.appendChild(option);
+        });
+    } catch (error) {
+        console.error('Erro ao carregar produtos:', error);
     }
 }
 
         document.addEventListener("DOMContentLoaded", function () {
             carregarListaDeProdutos();
         });
-
-function carregarListaDeProdutos(produtoSelecionado) {
-    const produtos = JSON.parse(localStorage.getItem('produtos')) || [];
-
-    // Limpa as opções existentes no select
-    produtoSelecionado.innerHTML = '<option value="" disabled selected>Selecione um produto</option>';
-
-    produtos.forEach((produto, index) => {
-        const option = document.createElement('option');
-        option.value = index;
-        option.textContent = produto.nomeProduto;
-        produtoSelecionado.appendChild(option);
-    });
-}
     </script>
 
     <footer class="text-light text-center py-3" style="background-color: rgb(49, 04, 59);">
