Fix: Adição finalizada dos produtos no contrato

--- a/views/paginaContrato.hbs
+++ b/views/paginaContrato.hbs
@@ -350,7 +350,7 @@
                 productSelect.innerHTML = `
                     <label for="produtoSelecionado${i}" class="col-sm-4 col-form-label">Produto:</label>
                     <div class="col-sm-8">
-                        <select class="form-select" id="produtoSelecionado${i}" name="produtos[${i}]">
+                        <select class="form-select" id="produtoSelecionado${i}" name="produtos">
                             <option value="" disabled selected>Selecione um produto</option>
                         </select>
                     </div>
