Fix: Lógica de refresh token de autenticação do google

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -168,7 +168,7 @@
 
             if (data.success) {
                 // Redireciona para a página de contrato ou onde for necessário
-                window.location.href = "/auth/google";
+                window.location.href = "/validarTokenGoogle";
             } else {
                 // Exibe o alerta de erro
                 alert(data.message);
