Nova Tela + Correções
Adicionado novas telas de acesso aos contratos. Operador tem acesso aos seus contratos enquanto Gerente tem acesso a todos os contratos. A tela permite o dowload e acesso ao arquivo do drive;
Corrigido checkbox de mudança de disponibilidade na edição dos produtos;
Lista de produtos selecionáveis na geração de contratos só contém produtos disponíveis;
Ajustado algumas coisas na lógica de geração de contratos.

--- a/views/atualizarOperador.hbs
+++ b/views/atualizarOperador.hbs
@@ -71,7 +71,7 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
+                            <li><a class="dropdown-item" href="gerarRelatorios">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="atualizarOperador">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
