--- a/views/cadastroClienteGerente.hbs
+++ b/views/cadastroClienteGerente.hbs
@@ -73,7 +73,7 @@
                         <ul class="dropdown-menu">
 
                             <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
-                            <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
+                            <li><a class="dropdown-item" href="gerarRelatorios">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
