--- a/views/telaInicialGerente.hbs
+++ b/views/telaInicialGerente.hbs
@@ -105,7 +105,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
-                            <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
+                            <li><a class="dropdown-item" href="gerarRelatorios">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
@@ -139,7 +139,7 @@
                         <i class="bi bi-graph-up card-icon"></i>
                         <h5 class="card-title">Gerar Relatórios</h5>
                         <p class="card-text text-white text-center">Visualizar e gerar relatórios de vendas.</p>
-                        <a href="" class="btn btn-light">Acessar</a>
+                        <a href="gerarRelatorios" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
                 <!-- Card 3: Gerar Contrato -->
