--- a/views/gerarRelatorios.hbs
+++ b/views/gerarRelatorios.hbs
@@ -105,7 +105,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
-                            <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
+                            <li><a class="dropdown-item" href="gerarRelatorios">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
@@ -144,6 +144,17 @@
                         <p class="card-text text-white text-center">Relatório de Vendas Gerais.</p>
 
                         <a href="/relatorioVendas" class="btn btn-light">Acessar</a>
+
+                    </div>
+                </div>
+                <!-- Card 3: Acessar contratos da empresa -->
+                <div class="card card-custom">
+                    <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                        <i class="bi bi-card-list card-icon"></i>
+                        <h5 class="card-title">Acessar Contratos</h5>
+                        <p class="card-text text-white text-center">Acessar contratos da Empresa.</p>
+
+                        <a href="/visualizarContratos" class="btn btn-light">Acessar</a>
 
                     </div>
                 </div>
