--- a/views/gerarRelatoriosOp.hbs
+++ b/views/gerarRelatoriosOp.hbs
@@ -104,7 +104,7 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
+                            <li><a class="dropdown-item" href="gerarRelatorios">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="atualizarOperador">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
@@ -143,6 +143,17 @@
                         <p class="card-text text-white text-center">Relatório das Minhas Vendas.</p>
 
                         <a href="" class="btn btn-light">Acessar</a>
+
+                    </div>
+                </div>
+                                <!-- Card 3: Acessar contratos da empresa -->
+                <div class="card card-custom">
+                    <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                        <i class="bi bi-card-list card-icon"></i>
+                        <h5 class="card-title">Acessar Contratos</h5>
+                        <p class="card-text text-white text-center">Acessar contratos da Empresa.</p>
+
+                        <a href="/visualizarContratos" class="btn btn-light">Acessar</a>
 
                     </div>
                 </div>
