--- a/views/telaInicialOp.hbs
+++ b/views/telaInicialOp.hbs
@@ -104,7 +104,7 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
+                            <li><a class="dropdown-item" href="gerarRelatorios">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="atualizarOperador">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
@@ -129,7 +129,7 @@
                         <i class="bi bi-graph-up card-icon"></i>
                         <h5 class="card-title">Gerar Relatórios</h5>
                         <p class="card-text text-white text-center">Visualizar e gerar relatórios de vendas.</p>
-                        <a href="" class="btn btn-light">Acessar</a>
+                        <a href="gerarRelatorios" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
                 <!-- Card 2: Gerar Contrato -->
