--- a/views/paginaContratoOperador.hbs
+++ b/views/paginaContratoOperador.hbs
@@ -232,50 +232,49 @@
         // Chama a função ao carregar a página
         document.addEventListener("DOMContentLoaded", preencherDadosCliente);
 
-        function togglePaymentDetails() {
-            const formaPagamento = document.getElementById("formaPagamento").value;
-            const dataPagamento = document.getElementById("dataPagamento");
-            const pixParceladoDetails = document.getElementById("pixParceladoDetails");
-            const datasPagamentos = document.getElementById("datasPagamentos");
+    function togglePaymentDetails() {
+        const formaPagamento = document.getElementById("formaPagamento").value;
+        const dataPagamento = document.getElementById("dataPagamento");
+        const pixParceladoDetails = document.getElementById("pixParceladoDetails");
+        const datasPagamentos = document.getElementById("datasPagamentos");
 
-            const labelDatasPagamentos = document.getElementById("dataPagamentoLabel");
+        const labelDatasPagamentos = document.getElementById("dataPagamentoLabel");
 
-            if (formaPagamento === "pixParcelado") {
-                pixParceladoDetails.style.display = "flex";
-                datasPagamentos.style.display = "block";
-                dataPagamento.style.display = "none";
+        if (formaPagamento === "Pix Parcelado") {
+            pixParceladoDetails.style.display = "flex";
+            datasPagamentos.style.display = "block";
+            dataPagamento.style.display = "none";
 
-                labelDatasPagamentos.style.display = "none";
+            labelDatasPagamentos.style.display = "none";
+        } else {
+            pixParceladoDetails.style.display = "none";
+            datasPagamentos.style.display = "none";
+            dataPagamento.style.display = "block"; // Mostra o campo único de data de pagamento
 
-            } else {
-                pixParceladoDetails.style.display = "none";
-                datasPagamentos.style.display = "none";
-                dataPagamento.style.display = "block"; // Mostra o campo único de data de pagamento
+            labelDatasPagamentos.style.display = "block";
 
-                labelDatasPagamentos.style.display = "block";
-
-                document.getElementById("numParcelas").value = ""; // Limpa o campo ao mudar de opção
-                document.getElementById("paymentDatesContainer").innerHTML = ""; // Limpa as datas de pagamento
-            }
+            document.getElementById("numParcelas").value = ""; // Limpa o campo ao mudar de opção
+            document.getElementById("paymentDatesContainer").innerHTML = ""; // Limpa as datas de pagamento
         }
+    }
 
-        function updatePaymentDates() {
-            const numParcelas = document.getElementById("numParcelas").value;
-            const paymentDatesContainer = document.getElementById("paymentDatesContainer");
+    function updatePaymentDates() {
+        const numParcelas = document.getElementById("numParcelas").value;
+        const paymentDatesContainer = document.getElementById("paymentDatesContainer");
 
-            // Limpa as datas de pagamento antes de preencher
-            paymentDatesContainer.innerHTML = "";
+        // Limpa as datas de pagamento antes de preencher
+        paymentDatesContainer.innerHTML = "";
 
-            // Adiciona campos para as datas de pagamento
-            for (let i = 1; i <= numParcelas; i++) {
-                // Cria um input de data e insere diretamente dentro do col-sm-8
-                const input = document.createElement("input");
-                input.type = "date";
-                input.className = "form-control mb-2"; // Estilo do Bootstrap para alinhar corretamente
+        // Adiciona campos para as datas de pagamento
+        for (let i = 1; i <= numParcelas; i++) {
+            // Cria um input de data e insere diretamente dentro do col-sm-8
+            const input = document.createElement("input");
+            input.type = "date";
+            input.className = "form-control mb-2"; // Estilo do Bootstrap para alinhar corretamente
 
-                paymentDatesContainer.appendChild(input);
-            }
+            paymentDatesContainer.appendChild(input);
         }
+    }
 
         // Validação do formulário
         document.getElementById('formContrato').addEventListener('submit', function (event) {
@@ -380,7 +379,9 @@ async function carregarListaDeProdutos(produtoSelecionado) {
 
         document.addEventListener("DOMContentLoaded", function () {
             carregarListaDeProdutos();
+            togglePaymentDetails();
         });
+
     </script>
 
     <footer class="text-light text-center py-3" style="background-color: rgb(49, 04, 59);">
