Primeira etapa de refatoração e correção das páginas
Removida uma função fantasma de controllers/auth (uma função de busca de Cliente);
Removida uma cópia da função de registrarCliente de clienteController;
Removida rota de operação de atualizar dados do gerente (já era a mesma do operador);
Unidas várias rotas de operador e gerente para uma única rota;
Removida rota "paginaContratoGerente", visto que não há mais nenhuma tela com esse nome;
Removidos alguns comentários e console.log de diversas páginas.

--- a/views/atualizarGerente.hbs
+++ b/views/atualizarGerente.hbs
@@ -75,7 +75,7 @@
 
                             <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
                             <li><a class="dropdown-item" href="gerarRelatorios">Gerar Relatórios</a></li>
-                            <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
+                            <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
                             <li><a class="dropdown-item" href="sair">Sair</a></li>
@@ -95,7 +95,7 @@
                     <div class="w-100 p-4 text-center"
                         style="background-color: var(--navbar-background-color); border-radius: 10px;">
                         <img src="/WhatsApp Image 2024-08-22 at 12.39.38.jpeg" width="100" alt="Imagem" class="mb-3">
-                        <form id="registrationForm" style="width: 100%;" action="/auth/atualizarGerente" method="post">
+                        <form id="registrationForm" style="width: 100%;" action="/auth/atualizar" method="post">
 
                             <!-- campo de cpf, será eliminado quando adicionarmos o token (CPF já será preenchido automaticamente) -->
                             <div class="mb-3">
