--- a/views/cadastrarClienteGerente.hbs
+++ b/views/cadastrarClienteGerente.hbs
@@ -98,7 +98,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
                             <li><a class="dropdown-item" href="gerarRelatorios">Gerar Relatórios</a></li>
-                            <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
+                            <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
                             <li><a class="dropdown-item" href="/">Sair</a></li>
@@ -299,7 +299,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <a id="confirmRegister" class="btn btn-primary" href="/cadastroClienteFormGerente">Cadastrar novo
+                    <a id="confirmRegister" class="btn btn-primary" href="/cadastroClienteForm">Cadastrar novo
                         cliente</a>
                 </div>
             </div>
