--- a/views/editarDados.hbs
+++ b/views/editarDados.hbs
@@ -142,7 +142,7 @@
                         <h5 class="card-title">Editar Meus Dados</h5>
                         <p class="card-text text-white text-center">Atualizar suas informações pessoais.</p>
 
-                        <a href="atualizarGerente" class="btn btn-light">Acessar</a>
+                        <a href="atualizarOperador" class="btn btn-light">Acessar</a>
 
                     </div>
                 </div>
