--- a/views/gerarRelatoriosOp.hbs
+++ b/views/gerarRelatoriosOp.hbs
@@ -131,7 +131,7 @@
                         <h5 class="card-title">Relatório de Comissões</h5>
                         <p class="card-text text-white text-center">Relatório de Comissões do operador.</p>
 
-                        <a href="" class="btn btn-light">Acessar</a>
+                        <a href="/relatorioComissoes" class="btn btn-light">Acessar</a>
 
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                         <h5 class="card-title">Relatório de Vendas</h5>
                         <p class="card-text text-white text-center">Relatório das Minhas Vendas.</p>
 
-                        <a href="" class="btn btn-light">Acessar</a>
+                        <a href="/relatorioVendas" class="btn btn-light">Acessar</a>
 
                     </div>
                 </div>
