--- a/views/cadastrarCliente.hbs
+++ b/views/cadastrarCliente.hbs
@@ -5,79 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Validar Clientes - Sagrado Neon</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        /* Tema claro */
-        :root {
-            --background-color: rgb(192, 185, 216);
-            --text-color: aliceblue;
-            --navbar-background-color: rgb(49, 04, 59);
-        }
-
-        /* Tema escuro */
-        .dark-mode {
-            --background-color: rgb(29, 5, 33);
-            --text-color: #ffffff;
-            --navbar-background-color: rgb(49, 04, 59);
-            /* Mantém a cor do navbar */
-        }
-
-        body {
-            background-color: var(--background-color);
-            color: var(--text-color);
-        }
-
-        .navbar {
-            background-color: var(--navbar-background-color);
-        }
-
-        .btn-dark-mode {
-            background-color: #ffffff;
-            color: #000000;
-        }
-
-        .title {
-            color: white;
-            margin-bottom: 20px;
-        }
-
-        .form-container {
-            background-color: rgb(49, 04, 59);
-            padding: 20px;
-            border-radius: 8px;
-        }
-
-        .form-container input,
-        .form-container select {
-            margin-bottom: 10px;
-        }
-
-        .form-container label {
-            color: white;
-        }
-
-        .content-spacing {
-            margin-top: 40px;
-            margin-bottom: 40px;
-        }
-
-        .is-invalid {
-            border-color: #dc3545;
-        }
-
-        .invalid-feedback {
-            display: block;
-            color: #dc3545;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-
-    <nav class="navbar navbar-expand-lg" style="background-color: rgb(49, 04, 59);">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img src="Images/Logoextendido.png" width="150" height="40" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -87,7 +22,6 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <div class="dropdown">
-
                         <button id="toggleTheme" class="btn btn-light btn-dark-mode">
                             <i class="bi bi-moon-fill"></i>
                         </button>
@@ -101,7 +35,6 @@
                             <li><a class="dropdown-item" href="atualizarOperador">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
                             <li><a class="dropdown-item" href="sair">Sair</a></li>
-
                         </ul>
                     </div>
                 </ul>
@@ -111,37 +44,29 @@
 
     <div class="flex-grow-1 d-flex align-items-center justify-content-center"
         style="background-color: --background-color;">
-
         <div class="container mt-4 content-spacing">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-10">
                     <div class="form-container text-center">
                         <img src="/WhatsApp Image 2024-08-22 at 12.39.38.jpeg" width="100" alt="Imagem" class="mb-3">
                         <p style="font-size: medium; color: var(--text-color);">Validar Clientes</p>
-
                         <form id="cadastroForm" onsubmit="return cadastrarCliente(event)">
                             <div class="mb-3 row">
                                 <label for="cpfCnpj" class="col-sm-4 col-form-label">CPF ou CNPJ:</label>
                                 <div class="col-sm-8">
-
                                     <input type="text" class="form-control" id="cpfCnpj">
-
                                 </div>
                             </div>
                             <div class="mb-3 row">
                                 <label for="contratante" class="col-sm-4 col-form-label">Contratante:</label>
                                 <div class="col-sm-8">
-
                                     <input type="text" class="form-control" id="contratante">
-
                                 </div>
                             </div>
                             <div class="mb-3 row">
                                 <label for="endereco" class="col-sm-4 col-form-label">Endereço:</label>
                                 <div class="col-sm-8">
-
                                     <input type="text" class="form-control" id="endereco">
-
                                 </div>
                             </div>
                             <div class="text-center">
@@ -154,37 +79,13 @@
         </div>
     </div>
 
-    <footer class="text-light text-center py-3" style="background-color: rgb(49, 04, 59);">
+    <footer class="text-light text-center py-3">
         Todos os direitos reservados
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
     <script>
-
-        // Recupera o estado do tema do armazenamento local
-        document.addEventListener('DOMContentLoaded', () => {
-            const isDarkMode = localStorage.getItem('darkMode') === 'true';
-            if (isDarkMode) {
-                document.body.classList.add('dark-mode');
-                document.getElementById('toggleTheme').innerHTML = '<i class="bi bi-brightness-high"></i>';
-            }
-        });
-
-        // Alterna o tema e salva a preferência
-        document.getElementById('toggleTheme').addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-            const isDarkMode = document.body.classList.contains('dark-mode');
-            localStorage.setItem('darkMode', isDarkMode);
-            document.getElementById('toggleTheme').innerHTML = isDarkMode
-                ? '<i class="bi bi-brightness-high"></i>'
-                : '<i class="bi bi-moon-fill"></i>';
-        });
-
         function cadastrarCliente(event) {
-            event.preventDefault(); // Evita o envio padrão do formulário
+            event.preventDefault();
 
             let isValid = true;
             const fields = [
@@ -203,39 +104,29 @@
                     input.classList.remove('is-invalid');
                 }
             });
-
             if (emptyFields) {
                 alert('Por favor, preencha os campos obrigatórios.');
                 isValid = false;
             }
-
-
-            // Obtendo os valores dos campos
             const contratante = document.getElementById("contratante").value;
             const cpfCnpj = document.getElementById("cpfCnpj").value;
             const endereco = document.getElementById("endereco").value;
-
-            // Armazenando os dados no LocalStorage
             localStorage.setItem("contratante", contratante);
             localStorage.setItem("cpfCnpj", cpfCnpj);
             localStorage.setItem("endereco", endereco);
-
         }
 
         document.getElementById('cadastroForm').addEventListener('submit', async function (e) {
             e.preventDefault();
 
             const cpfCnpj = document.getElementById('cpfCnpj');
-
             let isValid = true;
-
             cpfCnpj.classList.remove('is-invalid');
 
             if (!cpfCnpj.value.trim()) {
                 cpfCnpj.classList.add('is-invalid');
                 isValid = false;
             }
-
             if (!isValid) {
                 return;
             }
@@ -251,39 +142,32 @@
             if (data.success) {
                 window.location.href = "/paginaContrato";
             } else {
-                // Abre o modal de confirmação ao invés de um alert
                 const clientNotFoundModal = new bootstrap.Modal(document.getElementById('clientNotFoundModal'));
                 clientNotFoundModal.show();
             }
         });
 
-        document.getElementById('cpfCnpj').addEventListener('input', async function() {
-        const cpfCnpj = document.getElementById('cpfCnpj').value.trim();
-        
-        if (cpfCnpj.length === 11 || cpfCnpj.length === 14) {  // CPF ou CNPJ válido
-            const response = await fetch('/auth/locate', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ cpfCnpj: cpfCnpj })
-            });
+        document.getElementById('cpfCnpj').addEventListener('input', async function () {
+            const cpfCnpj = document.getElementById('cpfCnpj').value.trim();
 
-            const data = await response.json();
-
-            if (data.success) {
-                // Preenche automaticamente os campos
-                document.getElementById('contratante').value = data.cliente.nome;
-                document.getElementById('endereco').value = data.cliente.endereco;
-            } else {
-                // Limpa os campos se o cliente não for encontrado
-                document.getElementById('contratante').value = '';
-                document.getElementById('endereco').value = '';
+            if (cpfCnpj.length === 11 || cpfCnpj.length === 14) {
+                const response = await fetch('/auth/locate', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ cpfCnpj: cpfCnpj })
+                });
+                const data = await response.json();
+                if (data.success) {
+                    document.getElementById('contratante').value = data.cliente.nome;
+                    document.getElementById('endereco').value = data.cliente.endereco;
+                } else {
+                    document.getElementById('contratante').value = '';
+                    document.getElementById('endereco').value = '';
+                }
             }
-        }
-    });
-
+        });
     </script>
 
-    <!-- Modal -->
     <div class="modal fade" id="clientNotFoundModal" tabindex="-1" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog">
@@ -305,6 +189,10 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="/js/themeSwitcher.js"></script>
 </body>
 
 </html>
