--- a/views/cadastroClienteGerente.hbs
+++ b/views/cadastroClienteGerente.hbs
@@ -4,53 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cadastro - Sagrado Neon</title>
+    <title>Cadastro de clientes - Sagrado Neon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        /* Tema claro */
-        :root {
-            --background-color: rgb(192, 185, 216);
-            --text-color: aliceblue;
-            --navbar-background-color: rgb(49, 04, 59);
-        }
-
-        /* Tema escuro */
-        .dark-mode {
-            --background-color: rgb(29, 5, 33);
-            --text-color: #ffffff;
-            --navbar-background-color: rgb(49, 04, 59);
-            /* Mantém a cor do navbar */
-        }
-
-        body {
-            background-color: var(--background-color);
-            color: var(--text-color);
-        }
-
-        .navbar {
-            background-color: var(--navbar-background-color);
-        }
-
-        .btn-dark-mode {
-            background-color: #ffffff;
-            color: #000000;
-        }
-
-        .is-invalid {
-            border-color: #dc3545;
-        }
-
-        .invalid-feedback {
-            display: block;
-            color: #dc3545;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img src="/Logoextendido.png" width="150" height="40" alt="Logo">
@@ -61,9 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <div class="dropdown">
-
                         <button id="toggleTheme" class="btn btn-light btn-dark-mode">
-
                             <i class="bi bi-moon-fill"></i>
                         </button>
                         <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
@@ -71,14 +30,12 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
-
                             <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
                             <li><a class="dropdown-item" href="gerarRelatorios">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
                             <li><a class="dropdown-item" href="sair">Sair</a></li>
-
                         </ul>
                     </div>
                 </ul>
@@ -91,13 +48,10 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center" style="min-height: 300px;">
-                    <div class="w-100 p-4 text-center"
-                        style="background-color: var(--navbar-background-color); border-radius: 10px;">
+                    <div class="w-100 p-4 text-center" style="background-color: rgb(49, 04, 59); border-radius: 10px;">
                         <img src="/WhatsApp Image 2024-08-22 at 12.39.38.jpeg" width="100" alt="Imagem" class="mb-3">
-                        <form id="registrationForm" style="width: 100%;" action="/auth/registrarCliente"
-                            method="post">
+                        <form id="registrationForm" style="width: 100%;" action="/auth/registrarCliente" method="post">
                             <p style="font-size: medium; color: var(--text-color);">Cadastrar novo cliente.</p>
-                            <!-- campo de nome -->
                             <div class="mb-3">
                                 <i class="bi bi-emoji-laughing"
                                     style="color: var(--text-color); font-size: 1.5rem;"></i>
@@ -106,8 +60,6 @@
                                     <input type="text" class="form-control" id="nome" name="nome">
                                 </div>
                             </div>
-
-                            <!-- campo de cpf/cnpj -->
                             <div class="mb-3">
                                 <i class="bi bi-file-person" style="color: var(--text-color); font-size: 1.5rem;"></i>
                                 <label for="cpfCnpj" class="form-label" style="color: var(--text-color);">CPF (ou
@@ -116,16 +68,12 @@
                                     <input type="text" class="form-control" id="cpfCnpj" name="cpfCnpj">
                                 </div>
                             </div>
-
-                            <!-- campo de endereço -->
                             <div class="mb-3">
                                 <i class="bi bi-house" style="color: var(--text-color); font-size: 1.5rem;"></i>
                                 <label for="endereco" class="form-label"
                                     style="color: var(--text-color);">Endereço</label>
                                 <input type="text" class="form-control" id="endereco" name="endereco">
                             </div>
-
-                            <!-- campo de contato -->
                             <div class="mb-3">
                                 <i class="bi bi-telephone" style="color: var(--text-color); font-size: 1.5rem;"></i>
                                 <label for="contato" class="form-label"
@@ -143,86 +91,64 @@
     </div>
 
     <script>
-        // Recupera o estado do tema do armazenamento local
-        document.addEventListener('DOMContentLoaded', () => {
-            const isDarkMode = localStorage.getItem('darkMode') === 'true';
-            if (isDarkMode) {
-                document.body.classList.add('dark-mode');
-                document.getElementById('toggleTheme').innerHTML = '<i class="bi bi-brightness-high"></i>';
-            }
-        });
+        document.getElementById('registrationForm').addEventListener('submit', function (event) {
+            event.preventDefault();
 
-        // Alterna o tema e salva a preferência
-        document.getElementById('toggleTheme').addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-            const isDarkMode = document.body.classList.contains('dark-mode');
-            localStorage.setItem('darkMode', isDarkMode);
-            document.getElementById('toggleTheme').innerHTML = isDarkMode
-                ? '<i class="bi bi-brightness-high"></i>'
-                : '<i class="bi bi-moon-fill"></i>';
-        });
+            let isValid = true;
+            const fields = [
+                'nome',
+                'cpfCnpj',
+                'endereco',
+                'contato'
+            ];
+            let emptyFields = false;
 
-    document.getElementById('registrationForm').addEventListener('submit', function (event) {
-        // Impede o envio imediato do formulário
-        event.preventDefault();
-
-        let isValid = true;
-        const fields = [
-            'nome',
-            'cpfCnpj',
-            'endereco',
-            'contato'
-        ];
-        let emptyFields = false;
-
-        fields.forEach(id => {
-            const input = document.getElementById(id);
-            if (!input.value.trim()) {
-                input.classList.add('is-invalid');
-                emptyFields = true;
-            } else {
-                input.classList.remove('is-invalid');
-            }
-        });
-
-        if (emptyFields) {
-            alert('Por favor, preencha os campos obrigatórios.');
-            isValid = false;
-        }
-
-        if (isValid) {
-            // Validação adicional no CPF/CNPJ
-            const cpfCnpj = document.getElementById('cpfCnpj').value;
-
-            fetch('/auth/locate', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ cpfCnpj })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    alert('Cliente já cadastrado!');
+            fields.forEach(id => {
+                const input = document.getElementById(id);
+                if (!input.value.trim()) {
+                    input.classList.add('is-invalid');
+                    emptyFields = true;
                 } else {
-                    document.getElementById('registrationForm').submit();
+                    input.classList.remove('is-invalid');
                 }
-            })
-            .catch(error => {
-                console.log("Erro na requisição:", error);
             });
-        }
-    });
+            if (emptyFields) {
+                alert('Por favor, preencha os campos obrigatórios.');
+                isValid = false;
+            }
+            if (isValid) {
+                const cpfCnpj = document.getElementById('cpfCnpj').value;
+
+                fetch('/auth/locate', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ cpfCnpj })
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.success) {
+                            alert('Cliente já cadastrado!');
+                        } else {
+                            document.getElementById('registrationForm').submit();
+                        }
+                    })
+                    .catch(error => {
+                        console.log("Erro na requisição:", error);
+                    });
+            }
+        });
     </script>
 
-    <footer class="text-light text-center py-3" style="background-color: var(--navbar-background-color);">
+    <footer class="text-light text-center py-3">
         Todos os direitos reservados
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="/js/themeSwitcher.js"></script>
 </body>
 
 </html>
