--- a/views/relatorioVendas.hbs
+++ b/views/relatorioVendas.hbs
@@ -4,65 +4,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Relatório Vendas - Sagrado Neon</title>
+    <title>Relatório de Vendas - Sagrado Neon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        /* Estilos de tema claro e escuro */
-        :root {
-            --background-color: rgb(192, 185, 216);
-            --text-color: aliceblue;
-            --navbar-background-color: rgb(49, 04, 59);
-        }
-
-        .dark-mode {
-            --background-color: rgb(29, 5, 33);
-            --text-color: #ffffff;
-            --navbar-background-color: rgb(49, 04, 59);
-        }
-
-        body {
-            background-color: var(--background-color);
-            color: var(--text-color);
-        }
-
-        .navbar {
-            background-color: var(--navbar-background-color);
-        }
-
-        .form-container {
-            background-color: rgb(49, 04, 59);
-            padding: 20px;
-            border-radius: 8px;
-        }
-
-        .title {
-            color: white;
-            margin-bottom: 20px;
-        }
-
-        .content-spacing {
-            margin-top: 40px;
-            margin-bottom: 40px;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-
-    <nav class="navbar navbar-expand-lg" style="background-color: rgb(49, 04, 59);">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img src="Images/Logoextendido.png" width="150" height="40" alt="Logo">
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <div class="dropdown">
-
                         <button id="toggleTheme" class="btn btn-light btn-dark-mode">
-
                             <i class="bi bi-moon-fill"></i>
                         </button>
                         <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
@@ -77,7 +36,6 @@
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
                             <li><a class="dropdown-item" href="/">Sair</a></li>
                         </ul>
-                    
                     </div>
                 </ul>
             </div>
@@ -90,8 +48,8 @@
                 <div class="col-lg-6 col-md-8">
                     <div class="form-container">
                         <h1 class="text-center title">Relatório de Vendas</h1>
-                        <form id="comissaoForm" onsubmit="return calcularComissao(event)" action="/calcularComissao" method="POST">
-                            <!-- Seleção do Operador -->
+                        <form id="comissaoForm" onsubmit="return calcularComissao(event)" action="/calcularComissao"
+                            method="POST">
                             <div class="mb-3 row">
                                 <label for="operador" class="col-sm-4 col-form-label">Operador:</label>
                                 <div class="col-sm-8">
@@ -101,12 +59,10 @@
                                         <option value="operador2">Operador 2</option>
                                         <option value="operador3">Operador 3</option>
                                         <option value="todos">Todos</option>
-                                        <!-- Adicione mais operadores conforme necessário -->
                                     </select>
                                 </div>
                             </div>
-                            <!-- Seleção do Mês -->
-                             <div class="mb-3 row">
+                            <div class="mb-3 row">
                                 <label for="dataInicio" class="col-sm-4 col-form-label">Data de Início:</label>
                                 <div class="col-sm-8">
                                     <input type="date" class="form-control" id="dataInicio" name="dataInicio" required>
@@ -115,10 +71,10 @@
                             <div class="mb-3 row">
                                 <label for="dataTermino" class="col-sm-4 col-form-label">Data de Término:</label>
                                 <div class="col-sm-8">
-                                    <input type="date" class="form-control" id="dataTermino" name="dataTermino" required>
+                                    <input type="date" class="form-control" id="dataTermino" name="dataTermino"
+                                        required>
                                 </div>
                             </div>
-                            <!-- Botão para Calcular Comissão -->
                             <div class="text-center">
                                 <br>
                                 <button type="submit" class="btn btn-primary">Gerar Relatório</button>
@@ -130,23 +86,21 @@
         </div>
     </div>
 
-   <footer class="text-light text-center py-3" style="background-color: rgb(49, 04, 59);">
+    <footer class="text-light text-center py-3">
         Todos os direitos reservados
     </footer>
 
     <script>
-        // Função para calcular a comissão
         function calcularComissao(event) {
             event.preventDefault();
             const form = document.getElementById('comissaoForm');
             const formData = new FormData(form);
-
-            // Implementar lógica de cálculo da comissão aqui ou enviar para o servidor
             alert(`Calculando comissão para o operador ${formData.get('operador')} no mês ${formData.get('mes')}, ano ${formData.get('ano')}.`);
         }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/themeSwitcher.js"></script>
 </body>
 
 </html>
