--- a/views/telaInicialGerente.hbs
+++ b/views/telaInicialGerente.hbs
@@ -8,84 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-
-        /* Tema claro */
-        :root {
-            --background-color: rgb(192, 185, 216);
-            --text-color: aliceblue;
-            --navbar-background-color: rgb(49, 04, 59);
-        }
-
-        /* Tema escuro */
-        .dark-mode {
-            --background-color: rgb(29, 5, 33);
-            --text-color: #ffffff;
-            --navbar-background-color: rgb(49, 04, 59);
-            /* Mantém a cor do navbar */
-        }
-
-        body {
-            background-color: var(--background-color);
-            color: var(--text-color);
-        }
-
-        .navbar {
-            background-color: var(--navbar-background-color);
-        }
-
-        .btn-dark-mode {
-            background-color: #ffffff;
-            color: #000000;
-        }
-
-        .card-title {
-            color: white;
-        }
-
-        .card-custom {
-            background-color: rgb(49, 04, 59);
-            border: none;
-            transition: transform 0.3s ease-in-out;
-            width: 300px;
-            height: 300px;
-        }
-
-        .card-custom:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-        }
-
-        .card-icon {
-            font-size: 50px;
-            color: white;
-            margin-bottom: 20px;
-        }
-
-        .container-spacing {
-            margin-top: 40px;
-            margin-bottom: 40px;
-        }
-
-        .cards-wrapper {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            flex-wrap: nowrap;
-        }
-
-        .container-wrapper {
-            height: calc(100vh - 80px);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg" style="background-color: rgb(49, 04, 59);">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img src="/Logoextendido.png" width="150" height="40" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -96,7 +23,6 @@
                 <ul class="navbar-nav ms-auto">
                     <div class="dropdown">
                         <button id="toggleTheme" class="btn btn-light btn-dark-mode">
-
                             <i class="bi bi-moon-fill"></i>
                         </button>
                         <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
@@ -110,7 +36,6 @@
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="produtos">Produtos</a></li>
                             <li><a class="dropdown-item" href="sair">Sair</a></li>
-
                         </ul>
                     </div>
                 </ul>
@@ -118,13 +43,9 @@
         </div>
     </nav>
 
-    <!-- Conteúdo Principal -->
-
     <div class="container-wrapper" style="background-color: --background-color;">
-
         <div class="container mt-4 container-spacing">
             <div class="cards-wrapper text-center">
-                <!-- Card 1: Adicionar Usuário -->
                 <div class="card card-custom">
                     <div class="card-body d-flex flex-column align-items-center justify-content-center">
                         <i class="bi bi-person-plus-fill card-icon"></i>
@@ -133,7 +54,6 @@
                         <a href="cadastro" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
-                <!-- Card 2: Gerar Relatórios -->
                 <div class="card card-custom">
                     <div class="card-body d-flex flex-column align-items-center justify-content-center">
                         <i class="bi bi-graph-up card-icon"></i>
@@ -142,7 +62,6 @@
                         <a href="gerarRelatorios" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
-                <!-- Card 3: Gerar Contrato -->
                 <div class="card card-custom">
                     <div class="card-body d-flex flex-column align-items-center justify-content-center">
                         <i class="bi bi-file-earmark-text-fill card-icon"></i>
@@ -151,7 +70,6 @@
                         <a href="cadastrarCliente" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
-                <!-- Card 4: Editar Dados -->
                 <div class="card card-custom">
                     <div class="card-body d-flex flex-column align-items-center justify-content-center">
                         <i class="bi bi-pencil-square card-icon"></i>
@@ -160,7 +78,6 @@
                         <a href="editarDados" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
-                <!-- Card 5: Cadastrar Produtos -->
                 <div class="card card-custom">
                     <div class="card-body d-flex flex-column align-items-center justify-content-center">
                         <i class="bi bi-box-seam card-icon"></i>
@@ -173,35 +90,14 @@
         </div>
     </div>
 
-<script>
-    // Recupera o estado do tema do armazenamento local
-        document.addEventListener('DOMContentLoaded', () => {
-            const isDarkMode = localStorage.getItem('darkMode') === 'true';
-            if (isDarkMode) {
-                document.body.classList.add('dark-mode');
-                document.getElementById('toggleTheme').innerHTML = '<i class="bi bi-brightness-high"></i>';
-            }
-        });
-
-        // Alterna o tema e salva a preferência
-        document.getElementById('toggleTheme').addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-            const isDarkMode = document.body.classList.contains('dark-mode');
-            localStorage.setItem('darkMode', isDarkMode);
-            document.getElementById('toggleTheme').innerHTML = isDarkMode
-                ? '<i class="bi bi-brightness-high"></i>'
-                : '<i class="bi bi-moon-fill"></i>';
-        });
-</script>
-
-    <!-- Rodapé -->
-    <footer class="text-light text-center py-3" style="background-color: rgb(49, 04, 59);">
+    <footer class="text-light text-center py-3">
         Todos os direitos reservados
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="/js/themeSwitcher.js"></script>
 </body>
 
 </html>
